# ServiceMarkup

./: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
markup/: __main__.py  app.py  exceptions.py  models.py  settings.py
markup/db/: manager.py  settings.py
markup/db/models/: lesson.py  study.py  user.py
markup/db/repository/: user.py
markup/db/uow/: base.py
markup/handlers/: handlers.py
markup/routers/: router.py
markup/web/: web.py
